--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,16 @@
-version: "3"
+version: '2'
 services:
-  alpine:
-    image: alpine:latest
-    container_name: mainframe
-    restart: unless-stopped
-    ports:
-      - "9083:8083"
+  nginx:
+    image: nginx:stable
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.cal.rule=Host(`mainframe.pizzateig.me`)"
-      - "traefik.http.routers.cal.entrypoints=web"
-      - "traefik.http.services.cal.loadbalancer.server.port=9083"
+      - "traefik.enabled=true"
+      - "traefik.backend=nginx"
+      - "traefik.frontend.rule=Host:mainframe.pizzateig.me"
+      - "traefik.port=80"
+    restart: always
+    networks:
+      - web
+networks:
+  traefik_default:
+    external:
+      name: web
