--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
           - "9083:8083"
         volumes:
           - ./src:/usr/share/nginx/html
+        networks:
+          - traefik_network # <== Placing traefik on the network named web, to access containers on this network
         labels:
           - "traefik.enable=true"
           - "traefik.http.routers.projectx.rule=Host(`hive.polychrom.dev`)"
