--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 
 services:
-    client:
+    projectx:
         image: nginx:latest
         container_name: projectx
         ports:
