--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,21 @@
 version: "3"
 
 services:
-    projectx:
-        image: nginx:latest
-        container_name: projectx
-        ports:
-          - "9083:8083"
-        volumes:
-          - ./src:/usr/share/nginx/html
-        networks:
-          - "traefik_network" # <== Placing traefik on the network named web, to access containers on this network
-        labels:
-          - "traefik.enable=true"
-          - "traefik.http.routers.projectx.rule=Host(`hive.polychrom.dev`)"
-          - "traefik.http.routers.projectx.entrypoints=websecure"
-          - "traefik.http.routers..projectx.tls.certresolver=myresolver"
-          - "traefik.http.services.cal.loadbalancer.server.port=9083"
+  projectx:
+    image: nginx:latest
+    container_name: projectx
+    ports:
+      - "9083:8083"
+    volumes:
+      - ./src:/usr/share/nginx/html
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.projectx.rule=Host(`hive.polychrom.dev`)"
+      - "traefik.http.routers.projectx.entrypoints=websecure"
+      - "traefik.http.routers..projectx.tls.certresolver=myresolver"
+      - "traefik.http.services.cal.loadbalancer.server.port=9083"
+    networks:
+      - traefik_network # <== Placing traefik on the network named web, to access containers on this network
+networks:
+  traefik_network:
+    external: true
