--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - ./src:/usr/share/nginx/html
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.projectx.entrypoints=web"
+      - "traefik.http.routers.projectx.entrypoints=websecure"
       - "traefik.http.routers.projectx.rule=Host(`hive.polychrom.dev`)"
       - "traefik.http.routers.projectx.tls.certresolver=myresolver"
       - "traefik.http.services.cal.loadbalancer.server.port=9083"
