--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - "traefik.http.routers.projectx.entrypoints=websecure"
       - "traefik.http.routers.projectx.rule=Host(`hive.polychrom.dev`)"
       - "traefik.http.routers.projectx.tls.certresolver=myresolver"
-      - "traefik.http.services.projectx.loadbalancer.server.port=9083"
+      #- "traefik.http.services.projectx.loadbalancer.server.port=9083"
       - "traefik.port=8005"
 
     networks:
