--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,16 @@ version: "3"
 services:
   projectx:
     image: nginx:latest
-    container_name: projectx
+    container_name: hive_polychrom_dev
     ports:
       - 8005
     volumes:
       - ./src:/usr/share/nginx/html
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.projectx.entrypoints=websecure"
-      - "traefik.http.routers.projectx.rule=Host(`hive.polychrom.dev`)"
-      - "traefik.http.routers.projectx.tls.certresolver=myresolver"
+      - "traefik.http.routers.hive_polychrom_dev.entrypoints=websecure"
+      - "traefik.http.routers.hive_polychrom_dev.rule=Host(`hive.polychrom.dev`)"
+      - "traefik.http.routers.hive_polychrom_dev.tls.certresolver=myresolver"
       - "traefik.port=8005"
 
     networks:
